<resources>
    <string name="app_name">lab__11</string>
    <string name="enter_your_good_name">Enter your good Name</string>
    <string name="name">Name</string>
    <string name="submit">Submit</string>
    <string name="blood_group">Blood Group</string>
    <string name="enter_your_contact_number">Enter Your Contact Number</string>
    <string name="contact">Contact</string>
    <string name="enter_your_city_name">Enter Your City Name</string>
    <string name="city">City</string>
</resources>